feat(ffi,plugin): wire oxide-chunkgen into Folia via oxide-ffi + Panama (#6)
oxide-ffi: panic-safe C ABI (oxide_open/oxide_generate_chunk/oxide_close
+ accessors) over an opaque OxideGenerator handle. Every exported
function is wrapped in catch_unwind (a Rust panic crossing an
extern "C" boundary is UB) and null-checks every pointer argument.
5 integration tests exercise the exported functions directly against
oxide-datapack's existing valid_pack fixture.

oxide-noise: NoiseRouterEvaluator now owns its data (clones
df_registry and settings.noise_router once at construction) instead
of borrowing with a lifetime parameter -- removes a
self-referential-struct problem for the FFI handle, which needs to
own everything it hands across the boundary. Call sites are
unaffected; only the struct's own lifetime disappears.

plugin: OxideNative.java (Panama bindings, java.lang.foreign) and
OxideChunkGenerator.java (Bukkit ChunkGenerator override) bridge
Bukkit's world generation hook to the Rust generator.
/oxide createworld <name> [seed] creates a world using it, run on
Bukkit.getGlobalRegionScheduler() since world creation isn't bound
to any entity or existing region (unlike every other command here,
which uses the per-entity scheduler -- see OxideCommand's class doc).

Every Panama/Bukkit API used was confirmed against a real JDK 25 run
and a real paper-api jar pulled from the Gradle cache (decompiled,
same treatment as the RNG/noise verification pass), not guessed --
including one real bug that guessing would have missed:
ChunkGenerator.shouldGenerateNoise() defaults to false, so
generateNoise silently never fires without overriding it.

Scope, documented not hidden: exactly oxide-chunkgen::fill_chunk's
output (solid/fluid/air blob terrain) -- no biome transmission, no
surface rules, no structures. Single-platform (linux-x86_64) native
library, path is a config value -- no per-OS/arch resolution or
jar-embedded bundling. Not run against a live Folia server -- none
available 